<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_account_balance_black_48dp"
            android:title="@string/menu_title1" />
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_account_child_black_48dp"
            android:title="@string/menu_title2" />
        <item
            android:id="@+id/nav_kafeders"
            android:icon="@drawable/ic_assignment_ind_black_48dp"
            android:title="@string/menu_title3" />
        <item
            android:id="@+id/nav_fackultets"
            android:icon="@drawable/ic_my_library_books_black_24dp"
            android:title="@string/menu_title4" />

        <item
            android:id="@+id/nav_ocenki"
            android:icon="@drawable/ic_assessment_black_48dp"
            android:title="@string/menu_title5" />


    </group>
    </menu>



